# hafermilch

./: .env.example  .gitignore  CHANGELOG.md  README.md  cliff.toml  noxfile.py  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: browser-backends.md  cli-reference.md  concepts.md  development.md  get-started.md  index.md
docs/configuration/: llm-providers.md  personas.md  plans.md
docs/stylesheets/: extra.css
examples/personas/: office_clerk.yaml  startup_founder.yaml  tech_expert.yaml
examples/plans/: saas_onboarding.yaml
src/hafermilch/: __init__.py  cli.py
src/hafermilch/browser/: agent.py  agent_browser.py  base.py  context.py  factory.py  playwright_agent.py
src/hafermilch/core/: exceptions.py  models.py  settings.py
src/hafermilch/evaluation/: prompter.py  runner.py
src/hafermilch/llm/: base.py  factory.py  gemini_provider.py  litellm_provider.py  ollama_provider.py  openai_provider.py
src/hafermilch/personas/: loader.py
src/hafermilch/reporting/: reporter.py
src/hafermilch/reporting/templates/: report.html
tests/: conftest.py  test_agent_browser.py  test_llm_base.py  test_persona_loader.py  test_prompter.py  test_runner.py
